[package]
name = "bonq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "bevy-main" }
heron = { git = "https://github.com/jcornaz/heron", branch = "bevy-main", features = [
    "2d",
    # "debug-2d",
] }
